--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "path": "/api/cron/export-cleanup",
       "schedule": "0 4 * * *"
+    },
+    {
+      "path": "/api/cron/deadline-reminders",
+      "schedule": "0 9 * * *"
     }
   ]
 }
