--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
     "@tanstack/react-query": "^5.90.10",
+    "@tiptap/extension-character-count": "^3.18.0",
     "@tiptap/extension-collaboration": "^3.11.0",
     "@tiptap/extension-collaboration-caret": "^3.11.0",
     "@tiptap/extension-placeholder": "^3.11.0",
